<resources>
    <string name="app_name">Matched</string>

    <string name="warning_empty_username">Username must be filled</string>
    <string name="warning_empty_fullname">Full name must be filled</string>
    <string name="warning_empty_password">Password must be filled</string>
    <string name="warning_empty_title">Title must be filled</string>

    <string name="warning_invalid_username">Username format is invalid</string>
    <string name="warning_invalid_password">Password format is invalid</string>
    <string name="warning_invalid_duration">Invalid End Time</string>
    <string name="warning_duplicate_username">This Username has been registered</string>

    <string name="warning_not_match_account">This account does not match to our data</string>

    <string name="error_duplicate_approval">Approval has been set before</string>
    <string name="error_prototype">You are not allowed to do this action</string>
    <string name="error_general">Unknown Error</string>

    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="password">Password</string>

    <string name="date">Date</string>
    <string name="event_name">Event Name</string>
    <string name="event_location">Location</string>
    <string name="event_start_date">From</string>
    <string name="event_end_date">To</string>

    <string name="enter_username">Enter Username</string>
    <string name="enter_fullname">Enter Full Name</string>
    <string name="enter_password">Enter Password</string>

    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_event_location">Enter Location</string>

    <string name="load_data">Loading items..</string>
    <string name="success_update">Profile updated</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="enter_message">Enter your message</string>
</resources>
