<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.schedule.add.AddActivity"
    android:layout_margin="20dp">

    <id.my.avmmartin.matched.components.add_menu.AddMenu
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/etEventLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_location"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_start_date"
            android:textSize="20sp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/tvEventStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="end"
            android:layout_toStartOf="@id/tvEventStartTime"
            android:paddingRight="5dp" />

        <TextView
            android:id="@+id/tvEventStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="end"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_end_date"
            android:textSize="20sp"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvEventEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="end"
            android:layout_toStartOf="@id/tvEventEndTime"
            android:paddingRight="5dp" />

        <TextView
            android:id="@+id/tvEventEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="end"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp">

        <ImageButton
            android:id="@+id/ibCancelSchedule"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/cancel_24dp"
            android:layout_alignParentStart="true"/>

        <ImageButton
            android:id="@+id/ibAddSchedule"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/check_24dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout>
