<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/event_start_date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvApplicantUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="3dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/event_end_date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvRespondentUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="3dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/date"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvEventDateApproval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <ImageButton
            android:id="@+id/ibCancelScheduleApproval"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/cancel_24dp"
            android:paddingRight="40dp"
            android:layout_toStartOf="@id/ibAddScheduleApproval"/>

        <ImageButton
            android:id="@+id/ibAddScheduleApproval"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/check_24dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    
</LinearLayout>
